# flightgear-python

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run_tests.sh  setup.cfg
.circleci/: config.yml
docs/: Makefile
docs/source/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/source/_templates/: custom-base1.rst  custom-class-template.rst  custom-module-template.rst
examples/: simple.py  simple_ctrls.py  simple_fdm.py  simple_gui.py  simple_http.py  simple_telnet.py  simple_wing_level.py
flightgear_python/: ctrls_v27.py  fdm_v24.py  fdm_v25.py  fg_if.py  fg_util.py  general_util.py  gui_v8.py
scripts/: build_and_upload.sh  changelog_template.hbs  do_release.py  fg_full_integration_test.sh  run_tests.sh
src/flightgear_python/: __init__.py  fdm_v24.py  fdm_v25.py  fg_if.py
tests/: test_EventPipe.py  test_ctrls_connection.py  test_fdm_connection.py  test_fdm_structure.py  test_gui_connection.py  test_http_connection.py  test_integration_FG_Ctrls.py  test_integration_FG_FDM.py  test_integration_FG_Gui.py  test_integration_FG_http.py  test_integration_FG_http_vs_telnet.py  test_integration_FG_telnet.py  test_integration_JSBSim_fdm.py  test_integration_run_examples.py  test_integration_using_JSBSim.py  test_pickling.py  test_props_connection.py  test_telnet_connection.py  testing_common.py
tests/jsbsim_wrapper/: jsbsim_wrapper.py
tests/jsbsim_wrapper/xml_templates/: jsb_initialize_vehicle.xml  jsb_output_config_flightgear.xml  jsb_single_wp.xml  jsb_vehicle_script.xml
