[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flightgear_python"
version = "1.4.0"
description = "Interface for FlightGear network connections"
authors = ["Julianne Swinoga <julianneswinoga@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
construct = "^2.10"
# Following are pegged at the latest version that supports Python 3.6
multiprocess = "==0.70.12.2"
requests = "2.27.1"

[tool.poetry.dev-dependencies]
sphinx = "^5.1.1"
sphinx_mdinclude = "^0.5.2"
sphinx-rtd-theme = "^0.5.2"  # Can't `poetry update` with 1.0.0?
sh = "^1.14.3"
pytest-cov = "^3.0.0"
# Following are pegged at the latest version that supports Python 3.6
pytest = "==7.0.1"
GitPython = "==3.1.20"
pytest-mock = "==3.6.1"
JSBSim = "==1.1.11"

[tool.poetry.urls]
"Repository" = "https://github.com/julianneswinoga/flightgear-python"
"Documentation" = "https://flightgear-python.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/julianneswinoga/flightgear-python/issues"
