[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flightgear_python"
version = "1.7.0"
description = "Interface for FlightGear network connections"
authors = ["Julianne Swinoga <julianneswinoga@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
construct = "^2.10"
# Following are pegged at the latest version that supports Python 3.6
multiprocess = "==0.70.12.2"
requests = "==2.27.1"

[tool.poetry.dev-dependencies]
sphinx = "==4.3.2"  # Supports 3.6, and doesn't depend on importlib-metadata (conflict with flake8)
sphinx_mdinclude = "^0.5.2"
sphinx-rtd-theme = "^0.5.2"  # Can't `poetry update` with 1.0.0?
sh = { version = "^1.14.3", markers = "sys_platform == 'linux'" }
pytest-cov = "^3.0.0"
requests-mock = "^1.11.0"
Flake8-pyproject = "^1.2.3"
# Following are pegged at the latest version that supports Python 3.6
pytest = "==7.0.1"
pytest-timeout = "==2.1.0"
GitPython = "==3.1.20"
pytest-mock = "==3.6.1"
JSBSim = { version = "==1.1.11", markers = "python_version != '3.10'" }
black = "==22.8.0"
flake8 = "==5.0.4"

[tool.poetry.urls]
"Repository" = "https://github.com/julianneswinoga/flightgear-python"
"Documentation" = "https://flightgear-python.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/julianneswinoga/flightgear-python/issues"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = [
    'E731', # Do not assign a lambda expression, use a def
    'W503', # Line break occurred before a binary operator (incompatible with black)
]

[tool.pytest.ini_options]
markers = [
    'fg_integration: to be used with a running FlightGear instance. See scripts/fg_full_integration_test.sh (deselected by default)',
]
addopts = '-m "not fg_integration"'
filterwarnings = [
    'ignore::DeprecationWarning:setuptools:2',
]
