[metadata]
name = flightgear-python
version = 1.0.0
author = Julianne Swinoga
author_email = julianneswinoga@gmail.com
description = Interface for FlightGear network connections
keywords = flightgear, interface, simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/julianneswinoga/flightgear-python
project_urls =
    Source = https://github.com/julianneswinoga/flightgear-python
    Bug Tracker = https://github.com/julianneswinoga/flightgear-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

